--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,9 @@
     --foreground: #ededed;
   }
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   background: var(--background);
   color: var(--foreground);
